--- a/imaging/Reconstruction_improvement.ipynb
+++ b/imaging/Reconstruction_improvement.ipynb
@@ -101,11 +101,11 @@
     "k=1\n",
     "for i in range(num_patterns):   \n",
     "    #I1=cv2.imread('./pattern_10000.0_butterfly_better/'+str(k).rjust(5,'0')+'.png',0)\n",
-    "    I1=cv2.imread('../transmission/pattern_10000.0_butterfly_final_diffP_shuffle/'+str(k).rjust(5,'0')+'.png',0)\n",
+    "    I1=cv2.imread('../pattern_10000.0_butterfly_final_diffP_shuffle/'+str(k).rjust(5,'0')+'.png',0)\n",
     "    I1=I1/255\n",
     "    \n",
     "    #I2=cv2.imread('./pattern_10000.0_butterfly_better/'+str(k+1).rjust(5,'0')+'.png',0)\n",
-    "    I2=cv2.imread('../transmission/pattern_10000.0_butterfly_final_diffP_shuffle/'+str(k+1).rjust(5,'0')+'.png',0)\n",
+    "    I2=cv2.imread('../pattern_10000.0_butterfly_final_diffP_shuffle/'+str(k+1).rjust(5,'0')+'.png',0)\n",
     "    I2=I2/255\n",
     "    \n",
     "    pattern_all[i]=I1-I2\n",
